--- a/src/components/roadmap/index.css
+++ b/src/components/roadmap/index.css
@@ -1,1 +1,34 @@
+@media(max-width: 479px) { 
+    .image-container {
+       
+      width: auto;
+      max-width: none;
+      min-height: 400px;
+      object-fit: cover;
+      object-position: 0% 50%;
+      display: block;
+      overflow-x: auto;
+      white-space: initial;
+    }
+  }
 
+  .image-container {
+    background-size: cover;
+    width: 100%;
+    max-width: 1330px;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    overflow-x: scroll;
+    -webkit-overflow-scrolling: touch;
+  }
+  * {
+    box-sizing: border-box;
+}
+  .image-container img{
+    overflow-clip-margin: content-box;
+    border: 0;
+    vertical-align: middle;
+    width: 100%;
+    height: auto;
+  }
