--- a/src/components/roadmap/index.css
+++ b/src/components/roadmap/index.css
@@ -1,34 +1,18 @@
-@media(max-width: 479px) { 
-    .image-container {
-       
-      width: auto;
-      max-width: none;
-      min-height: 400px;
-      object-fit: cover;
-      object-position: 0% 50%;
-      display: block;
-      overflow-x: auto;
-      white-space: initial;
-    }
+
+@media (max-width: 576px) {
+  .image-container {
+    height: 70vh;
+    overflow-x: scroll;
+    white-space: nowrap;
   }
 
-  .image-container {
-    background-size: cover;
-    width: 100%;
-    max-width: 1330px;
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
-    overflow-x: scroll;
-    -webkit-overflow-scrolling: touch;
+  .image-container img {
+    max-width: initial;
+    height: 100%;
+    transform-origin: left;
   }
-  * {
-    box-sizing: border-box;
 }
-  .image-container img{
-    overflow-clip-margin: content-box;
-    border: 0;
-    vertical-align: middle;
-    width: 100%;
-    height: auto;
-  }
+
+.image-container {
+  width: 100%;
+}
